# QtApplicationTemplate

./: .gitignore  CMakeLists.txt  LICENSE  README.en.md  README.md
CMake/: CMakeUninstall.cmake.in  Packaging.cmake
Packaging/: ApplicationName.desktop  Shortcut.qs
Src/: CMakeLists.txt  Main.cpp
